website update html css js

--- a/ashiana/index.html
+++ b/ashiana/index.html
@@ -314,11 +314,16 @@
   <!-- ================= FOOTER ================= -->
   <footer class="lp-footer">
     <div class="footer-divider"></div>
-
+     <p><strong>RERA:REGISTERED NUMBER-</strong> GGM/1014/746/2025/117</p>
+    <p><strong>Address:</strong> ASHIANA AAROHAM, Gurugram</p>
     <p>
       Disclaimer: This website is for information purposes only and does not
       constitute an offer to sell. Project details are indicative and subject
       to change. Marketed by <strong>Apex Landbase</strong>.
+    </p>
+     <p>
+      Explore more luxury residential projects by
+      <a href="../index.html">Apex Landbase</a>
     </p>
   </footer>
    <!-- ===== APEX LANDBASE : COMMON POPUP FORM ===== -->
